--- a/app/css/main.css
+++ b/app/css/main.css
@@ -54,6 +54,11 @@ img {
         color: #465263;
     }
 }
+@media screen and (max-width: 320px) {
+    .header {
+        padding-left: 11%;
+    }
+}
 
 .btn:hover {
     background-color: #4175cb;
@@ -105,6 +110,11 @@ img {
         justify-content: center;
         flex-wrap: wrap;
         margin: 0 30px;
+    }
+    @media screen and (max-width: 320px) {
+        &_ul {
+            margin: 0 10px;
+        }
     }
     
     &_ico {
